--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 group=org.fiolino
 artifactId=searcher
-version=1.0.0-SNAPSHOT
+version=1.0.0
 
-libCommonsVersion=1.0.0-SNAPSHOT
+libCommonsVersion=1.0.4
 libSlf4jVersion=1.7.22
 libSolrjVersion=6.4.0
 libReflectionsVersion=0.9.10
